--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.14.0",
     "react-simple-typewriter": "^5.0.1",
     "react-tsparticles": "^2.12.2"
   },
