--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist -b gh-pages -m 'Deploy' --cname ermiaswakgari.me"
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
