--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@material-tailwind/react": "^2.1.10",
+    "@vercel/speed-insights": "^1.3.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.11.17",
     "react": "^18.3.1",
